--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,7 @@ nav:
       - Google Cloud Repositories: sources/googlecloudrepositories.md
       - Google Cloud Storage: sources/googlecloudstorage.md
       - Kafka: sources/kafka.md
+      - MongoDBSource: sources/mongodb.md
       - HTTP Poller: sources/httppoller.md
       - IBM MQ: sources/ibmmq.md
       - OCIMetrics: sources/ocimetrics.md
