--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,9 +67,10 @@ nav:
       - Google Cloud Pub/Sub: sources/googlecloudpubsub.md
       - Google Cloud Repositories: sources/googlecloudrepositories.md
       - Google Cloud Storage: sources/googlecloudstorage.md
-      - Kafka: sources/kafka.md
       - HTTP Poller: sources/httppoller.md
       - IBM MQ: sources/ibmmq.md
+      - Kafka: sources/kafka.md
+      - MongoDB: sources/mongodb.md
       - OCIMetrics: sources/ocimetrics.md
       - Salesforce: sources/salesforce.md
       - Slack: sources/slack.md
